# simplex

./: .gitignore  README.md  meson.build
files/: agg.mps  agg2.mps  agg3.mps  bnl1.mps  bnl2.mps  lotfi.mps  modszk1.mps  sc205.mps  scagr25.mps  scagr7.mps  scrs8.mps  scsd1.mps  scsd6.mps  scsd8.mps  sctap1.mps  sctap2.mps  sctap3.mps  share1b.mps  share2b.mps  ship04l.mps  ship04s.mps  ship08l.mps  ship08s.mps  ship12l.mps  ship12s.mps  stair.mps  stocfor1.mps  stocfor2.mps  test.mps  test2.mps  test3.mps  tuff.mps  wood1p.mps  woodw.mps
src/: main.cpp  meson.build  mpsReader.cpp  mpsReader.h  solver.cpp  solver.h
